Sam added an image to the img folder and added info about herself to the index page

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
   <h2> Haven Leann Knight </h2>
   <p> I am 19 years old currently going to PTC for web design. I also have 3 years of experience from a career technical school for marketing and web design.</p>
   <img src="img/me.jpg" alt="My mood">
+
+  <h2>Samantha Musillo</h2>
+  <p>I am from South Park, Pennsylvania. I have a cat named Travis.</p>
+  <img src="img/sam-and-trav.jpg" alt="A picture of Sam and her cat Travis"/>
 </body>
  </html>
